--- a/backend/gradle/wrapper/gradle-wrapper.properties
+++ b/backend/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,11 @@
+# Create gradle-wrapper.properties
+@"
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.5-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+"@ | Out-File -FilePath "gradle\wrapper\gradle-wrapper.properties" -Encoding UTF8
+
+# Download gradle-wrapper.jar
+Invoke-WebRequest -Uri "https://github.com/gradle/gradle/raw/master/gradle/wrapper/gradle-wrapper.jar" -OutFile "gradle\wrapper\gradle-wrapper.jar"
